# mine-C-raft

./: .gitignore  Base.cpp  Blocks.cpp  CMakeLists.txt  Entities.cpp  Graphics.cpp  Minecraft.code-workspace  README.md  Settings.json  Setup.py  Setup.sh  minecraft  minecrafttestcompiled
Code/: Base.cpp  General.cpp  Graphics.cpp  GraphicsMain.cpp  GraphicsWorldGeneration.cpp  Main.cpp  Models.cpp  World.cpp  WorldGeneration.cpp
Code/Graphics/: GraphicsMain.cpp  IndexBuffer.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Code/Headers/: AllFiles.hpp  BaseHeader.hpp  Debug.hpp  Enums.hpp  GeneralHeader.hpp  GraphicsHeader.hpp  GraphicsMain.hpp  GraphicsWorldGeneration.hpp  IndexBuffer.hpp  MainHeader.h  MainHeader.hpp  Models.hpp  StaticHeader.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  World.hpp  WorldGeneration.hpp
Code/Shaders/: Basic.shader
Code/Static/: Blocks.cpp  Entities.cpp  IdEnums.cpp
Includes/Ogre/include/OGRE/: OgreBuildSettings.h
Includes/Ogre/lib/: libOgreBites.so.13.4  libOgreOverlay.so.13.4  libOgreRTShaderSystem.so.13.4
Includes/Ogre/lib/OGRE/cmake/: OGREConfig.cmake  OGREConfigVersion.cmake  OgreTargets-release.cmake  OgreTargets.cmake
Includes/Ogre/lib/pkgconfig/: OGRE-Bites.pc  OGRE-Overlay.pc  OGRE-RTShaderSystem.pc  OGRE.pc
Includes/Ogre/share/OGRE/: plugins.cfg  resources.cfg  samples.cfg
Includes/include/OGRE/: OgreComponents.h
Includes/lib/: libOgreBites.so.13.4  libOgreBitesQt.so.13.4  libOgreOverlay.so.13.4  libOgreRTShaderSystem.so.13.4
Includes/lib/OGRE/cmake/: OGREConfig.cmake  OGREConfigVersion.cmake  OgreTargets-release.cmake  OgreTargets.cmake
Includes/lib/cmake/nlohmann_json/: nlohmann_jsonTargets.cmake
Includes/lib/pkgconfig/: OGRE-Bites.pc  OGRE-Overlay.pc  OGRE-RTShaderSystem.pc  OGRE.pc  nlohmann_json.pc
Includes/share/OGRE/: plugins.cfg  resources.cfg  samples.cfg
Resources/Materials/: Blocks.material
